--- a/style.css
+++ b/style.css
@@ -187,3 +187,48 @@ color: white;
 
 
 }
+.foods{
+display: flex;
+width: 95%;
+justify-content: space-between;
+align-items: center;
+flex-wrap: wrap;
+  margin: auto;
+}
+.food--img{
+width: 32%;
+height: 437px;
+margin-bottom: 20px;
+
+
+}
+
+.instagram{
+
+display: flex;
+direction: ltr;
+
+
+}
+
+
+
+.instagram--page{
+
+float: left;
+margin-top: 100px;
+margin-left: 50px;
+margin-bottom: 70px;
+font-size: 50px;
+color: #009900;
+background-color: #000000;
+padding: 10px 25px;
+border-radius: 50%;
+}
+.instagram--name{
+
+margin-top: 120px;
+margin-left: 30px;
+font-size: 32px;
+
+}
