--- a/style.css
+++ b/style.css
@@ -232,3 +232,42 @@ margin-left: 30px;
 font-size: 32px;
 
 }
+.hamberger{
+
+display: none;
+
+
+}
+footer{
+
+height: 500px;
+background-color: #000000;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.footer--logo{
+width: 150px;
+margin-top: 50px;
+
+
+
+}
+.footer--tamas{
+color: #009900
+
+
+}
+.footer--ertebatat{
+color: #009900;
+font-size: 100px;
+
+
+
+}
+.about--image{
+width: 600px;
+height: 600px;
+
+
+}
