--- a/style.css
+++ b/style.css
@@ -271,3 +271,15 @@ height: 600px;
 
 
 }
+.tasavir{
+
+  display: flex;
+  width: 95%;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+    margin: auto;
+margin-top: 50px;
+
+
+}
