--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ header {
 
 .header--ul--li {
   display: inline-block;
-  width: 150px;
+  width: 100px;
   height: 50px;
   text-align: center;
   line-height: 80px;
-  margin-left: 50px;
+  
 }
 
 .header--button {
@@ -66,11 +66,11 @@ header {
   width: 100%;
   height: 100%;
   text-align: center;
-  margin-left: 30px;
+
   text-decoration: none;
   background-color: #009900;
   border: 2px solid white;
-  border-radius: 20px;
+  
   transition: .5s;
 }
 
@@ -280,6 +280,76 @@ height: 600px;
   flex-wrap: wrap;
     margin: auto;
 margin-top: 50px;
+
+
+}
+.tasvir--img{
+  width: 32%;
+height: 437px;
+margin-bottom: 20px;
+
+}
+.cards{
+display: flex;
+flex-wrap: wrap;
+width: 90%;
+margin: auto;
+margin-top: 50px;
+justify-content: space-between;
+
+}
+.cards--div{
+width: 30%;
+background-color: #000000;
+margin-bottom: 40px;
+height: 400px;
+border-radius: 30px;
+display: flex;
+flex-direction: column;
+align-items: center;
+overflow: hidden;
+}
+.cards--div--img{
+width: 100%;
+height: 200px;
+
+
+
+
+}
+.cards--div--name{
+color: #009900;
+
+
+
+
+
+}
+.cards--div--price{
+
+
+  color: #009900;
+}
+.cards--div--a{
+
+color: black;
+background-color: white;
+width: 100%;
+height: 66px;
+border-bottom-left-radius: 30px;
+border-bottom-right-radius: 30px;
+text-decoration: none;
+margin: auto;
+text-align: center;
+font-size: 24px;
+padding-top: 15px;
+transition: .5s;
+}
+.cards--div--a:hover{
+background-color:black;
+color: red;
+transition: .5s;
+
 
 
 }
